# ladok3

./: .copilotrc.json  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  canvas_ladok3_spreadsheet.py  canvas_students_missing_integration_ids.py  cl_user_info.py  ladok3.py  ladok3_course_instance_to_spreadsheet.py  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: validate-copilot.yml
doc/: .gitignore  Makefile  abstract.tex  ladok3.tex  preamble.tex
docker/: Dockerfile  Makefile
examples/: .gitignore  Makefile  add_stats_to_spreadsheet.py  canvas2ladok.nw  canvas_ladok3_spreadsheet.py  cl_user_info.py  datintro.nw  example_Course.py  example_LadokSession.py  example_Student.py  ladok3_course_instance_to_spreadsheet.py  prgi.nw  stats.nw
ladok_cli/: .gitignore  Makefile  abstract.tex  preamble.tex  requirements.txt
ladok_lib/: .gitignore  Makefile  example_Course.py  example_LadokSession.py  example_Student.py  ladok3.nw  preamble.tex  prgi.nw  requirements.txt  stats-data.nw  stats-grade.nw  stats.nw  stats.tex
src/ladok3/: .gitignore  Makefile  abstract.tex  api.nw  cli.nw  data.nw  kth.nw  ladok3.nw  report.nw  scripts.nw  student.nw  undoc.nw
tests/: .gitignore  Makefile
