[tool.poetry]
name = "ladok3"
version = "1.20"
description = "Python wrapper and CLI for the LADOK3 REST API."
authors = [
  "Daniel Bosk <dbosk@kth.se>",
  "Alexander Baltatzis",
  "Gerald Q. Maguire Jr"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dbosk/ladok3"
keywords = ["ladok3", "ladok"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Utilities"
]
include = ["src/**/*.py", "src/ladok3/ladok.bash"]
exclude = ["*/**/*.csv", "doc/", "examples/", "*/**/ltxobj/*", "*.pdf"]

[tool.poetry.scripts]
ladok = "ladok3.cli:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dbosk/ladok3/issues"
"Releases" = "https://github.com/dbosk/ladok3/releases"

[tool.poetry.dependencies]
python = "^3.9"
appdirs = "^1.4.4"
argcomplete = "^2.0.0"
cachetools = "^5.2.0"
cryptography = "^37.0.3"
keyring = "^23.6.0"
requests = "^2.28.0"
urllib3 = "^1.26.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
