[tool.poetry]
name = "ladok3"
version = "4.17"
description = "Python wrapper and CLI for the LADOK3 REST API."
authors = [
  "Daniel Bosk <dbosk@kth.se>",
  "Alexander Baltatzis",
  "Gerald Q. Maguire Jr"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dbosk/ladok3"
keywords = ["ladok3", "ladok"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Utilities"
]
include = [
  {path="src/**/*.py", format="wheel"},
  {path="src/ladok3/ladok.bash", format="wheel"},
  {path="doc/ladok3.pdf", format="wheel"},
  {path="src/**/*.nw", format="sdist"},
  {path="src/**/Makefile", format="sdist"},
  {path="doc/*.tex", format="sdist"},
  {path="doc/Makefile", format="sdist"},
  {path="makefiles/*.mk", format="sdist"}
]
exclude = [
  {path="src/**/*.py", format="sdist"},
  {path="src/**/*.nw", format="wheel"},
  {path="doc/", format="wheel"},
  "*/**/*.csv",
  "*/**/ltxobj",
  "*/**/*.pdf"
]

[tool.poetry.scripts]
ladok = "ladok3.cli:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dbosk/ladok3/issues"
"Releases" = "https://github.com/dbosk/ladok3/releases"

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "^1.4.4"
argcomplete = "^2.0.0"
cachetools = "^5.2.0"
cryptography = "^41.0.3"
keyring = "^24.2.0"
requests = "^2.31.0"
urllib3 = "^1.26.9"
weblogin = "^1.11"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
numpy = "^1.23.4"
pandas = "^1.5.1"
Pygments = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
