[project]
name = "ladok3"
version = "5.7"
description = "Python wrapper and CLI for the LADOK3 REST API."
license = "MIT"
readme = "README.md"
keywords = ["ladok3", "ladok"]
authors = [
  {name = "Daniel Bosk", email = "daniel@bosk.se"},
  {name = "Gerald Q. Maguire Jr"},
  {name = "Alexander Baltatzis"}
]
maintainers = [
  {name = "Daniel Bosk", email = "dbosk@kth.se"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Utilities"
]
requires-python = ">=3.8,<4.0"
dependencies = [
  "appdirs>=1.4.4,<2.0.0",
  "argcomplete>=2.0.0,<3.0.0",
  "cachetools>=5.2.0,<6.0.0",
  "cryptography>=41.0.3,<42.0.0",
  "keyring>=24.2.0,<25.0.0",
  "requests>=2.31.0,<3.0.0",
  "urllib3 (>=2.0)",
  "weblogin (>=1.13,<2.0)"
]

[project.scripts]
ladok = "ladok3.cli:main"

[project.urls]
repository = "https://github.com/dbosk/ladok3"
documentation = "https://github.com/dbosk/ladok3/releases"
"Bug Tracker" = "https://github.com/dbosk/ladok3/issues"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
snoop = ">=0.4.3"
pysnooper = ">=1.2.1"
pdbpp = ">=0.10.3"

[tool.poetry]
include = [
  {path="src/**/*.py", format="wheel"},
  {path="src/ladok3/ladok.bash", format="wheel"},
  {path="doc/ladok3.pdf", format="wheel"},
  {path="src/**/*.nw", format="sdist"},
  {path="src/**/Makefile", format="sdist"},
  {path="doc/*.tex", format="sdist"},
  {path="doc/Makefile", format="sdist"},
  {path="makefiles/*.mk", format="sdist"}
]
exclude = [
  {path="src/**/*.py", format="sdist"},
  {path="src/**/*.nw", format="wheel"},
  {path="doc/", format="wheel"},
  "*/**/*.csv",
  "*/**/ltxobj",
  "*/**/*.pdf",
  "*/**/.gitignore",
  {path = "*/**/Makefile", format = "wheel"},
  "*/**/.git",
  "*/**/*.xlsx"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
